# esp32-ota

firmware/: AC1500_CY_Ctlr_v1.0.0.hex  AC1500_TI_Ctlr_v1.1.0.hex  BCM_Ctlr_Rv01.3.0.hex  BMS_BCM_TI_Ctlr-v1.1.3.hex  FLEXDC_CY_LCD_Ctlr_v1.0.0.hex  FLEXDC_TI_LCD_Ctlr_v1.0.0.hex  SuperChgr_CY_Ctlr_SCM_v1.0.0.hex  SuperChgr_TI_Ctlr_SCM_v1.0.0.hex
main/: CMakeLists.txt  main.c  main.h  wifi.c
